overflow issue fixed on firefox + project appearance modified on desktop mode

--- a/src/components/projects/FullProject.css
+++ b/src/components/projects/FullProject.css
@@ -6,9 +6,12 @@
   flex-direction: column;
   align-items: center;
 }
-.FullProjectTopContainer img {
-  width: 110%;
+.Block1 {
+  width: 111%;
   margin-bottom: 20px;
+}
+.Block1 img {
+  width: 100%;
 }
 
 .InformationContainer {
@@ -166,22 +169,45 @@
 
 @media screen and (min-width: 769px) {
   .FullProjectTopContainer {
+    padding-top: 30px;
     flex-direction: row;
     align-items: flex-end;
-    margin-bottom: 20px;
+    justify-content: center;
+    margin-bottom: 35px;
   }
-  .FullProjectTopContainer img {
-    width: 40%;
-    max-width: 700px;
+  .Block1 {
+    padding-bottom: 0;
+    margin-bottom: 0;
+    max-height: 500px;
+    width: unset;
+    display: flex;
+    align-items: flex-end;
+  }
+
+  .Block2 {
+    display: flex;
+    flex-direction: column;
+    width: 55%;
+    margin-left: 30px;
   }
   .InformationContainer {
     align-items: flex-start;
-    margin-left: 20px;
   }
   .Information {
     justify-content: flex-start;
   }
   .Information div {
-    margin-right: 50px;
+    margin-right: 20px;
+  }
+  .Description {
+    height: 250px;
+    padding-bottom: 3px;
+  }
+  .Description .text {
+    padding-right: 10px;
+    overflow-y: scroll;
+  }
+  .Description .text:after {
+    display: none;
   }
 }
